--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "df = pd.read_csv('credit_card_default_train.csv', header=0)\n",
     "df_test = pd.read_csv('credit_card_default_test.csv', header=0)\n",
     "#features=list(df.columns[:])\n",
-    "#features"
+    "#features\n",
+    "#X.isnull().sum() check whether some values are missing"
    ]
   },
   {
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,10 +146,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from numpy import array\n",
     "from numpy import argmax\n",
@@ -161,30 +160,41 @@
     "label_encoder = LabelEncoder()\n",
     "X1 = label_encoder.fit_transform(values)\n",
     "X1=pd.DataFrame(X1, columns=['Balance_Limit_V1'])\n",
+    "#values_mappings = {index: label for index, label in enumerate(label_encoder.classes_)}\n",
+    "#print(values_mappings)\n",
     "\n",
     "#X2\n",
     "values = array(X2)\n",
     "label_encoder = LabelEncoder()\n",
     "X2 = label_encoder.fit_transform(values)\n",
     "X2=pd.DataFrame(X2, columns=['Gender'])\n",
+    "#values_mappings = {index: label for index, label in enumerate(label_encoder.classes_)}\n",
+    "#print(values_mappings)\n",
     "\n",
     "#X3\n",
     "values = array(X3)\n",
     "label_encoder = LabelEncoder()\n",
     "X3 = label_encoder.fit_transform(values)\n",
     "X3=pd.DataFrame(X3, columns=['EDUCATION_STATUS'])\n",
+    "#values_mappings = {index: label for index, label in enumerate(label_encoder.classes_)}\n",
+    "#print(values_mappings)\n",
     "\n",
     "#X4\n",
     "values = array(X4)\n",
     "label_encoder = LabelEncoder()\n",
     "X4 = label_encoder.fit_transform(values)\n",
     "X4=pd.DataFrame(X4, columns=['MARITAL_STATUS'])\n",
+    "#values_mappings = {index: label for index, label in enumerate(label_encoder.classes_)}\n",
+    "#print(values_mappings)\n",
     "\n",
     "#X5\n",
     "values = array(X5)\n",
     "label_encoder = LabelEncoder()\n",
     "X5 = label_encoder.fit_transform(values)\n",
     "X5=pd.DataFrame(X5, columns=['AGE'])\n",
+    "#values_mappings = {index: label for index, label in enumerate(label_encoder.classes_)}\n",
+    "#print(values_mappings)\n",
+    "\n",
     "#train end\n",
     "\n",
     "\n",
@@ -225,7 +235,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this is better than previous encodings\n",
+    "\n",
+    "#train\n",
+    "#X1 - 0\n",
+    "balance_limit_ord_map = {'1M':1000000,'1.5M':1500000,'2.5M':2500000, '100K':100000,'200K':200000,'300K':300000,'400K':400000,' 500K':500000,}\n",
+    "X1['Balance_Limit_V1']=X1['Balance_Limit_V1'].map(balance_limit_ord_map)\n",
+    "\n",
+    "#X2 - 1\n",
+    "gender_ord_map={'F':1,'M':2}\n",
+    "X2['Gender']=X2['Gender'].map(gender_ord_map)\n",
+    "\n",
+    "#X3 -2\n",
+    "educational_status_ord_map={'Other':1,'High School':2,'Graduate':3}\n",
+    "X3['EDUCATION_STATUS']=X3['EDUCATION_STATUS'].map(educational_status_ord_map)\n",
+    "\n",
+    "#X4 - 3\n",
+    "marital_status_ord_map={'Other':1, 'Single':2}\n",
+    "X4['MARITAL_STATUS']=X4['MARITAL_STATUS'].map(marital_status_ord_map)\n",
+    "\n",
+    "#X5- 4\n",
+    "age_ord_map={'31-45':1,'46-65':2,'Less than 30':0,'More than 65':3}\n",
+    "X5['AGE']=X5['AGE'].map(age_ord_map)\n",
+    "\n",
+    "#train end\n",
+    "\n",
+    "\n",
+    "#test\n",
+    "#X1 - 0\n",
+    "balance_limit_ord_map = {'1M':1000000,'1.5M':1500000,'2.5M':2500000, '100K':100000,'200K':200000,'300K':300000,'400K':400000,' 500K':500000,}\n",
+    "X1_test['Balance_Limit_V1']=X1_test['Balance_Limit_V1'].map(balance_limit_ord_map)\n",
+    "\n",
+    "#X2 -1\n",
+    "gender_ord_map={'F':1,'M':2}\n",
+    "X2_test['Gender']=X2_test['Gender'].map(gender_ord_map)\n",
+    "\n",
+    "#X3 -2\n",
+    "educational_status_ord_map={'Other':1,'High School':2,'Graduate':3}\n",
+    "X3_test['EDUCATION_STATUS']=X3_test['EDUCATION_STATUS'].map(educational_status_ord_map)\n",
+    "\n",
+    "#X4 - 3\n",
+    "marital_status_ord_map={'Other':1, 'Single':2}\n",
+    "X4_test['MARITAL_STATUS']=X4_test['MARITAL_STATUS'].map(marital_status_ord_map)\n",
+    "\n",
+    "#X5- 4\n",
+    "age_ord_map={'31-45':1,'46-65':2,'Less than 30':0,'More than 65':3}\n",
+    "X5_test['AGE']=X5_test['AGE'].map(age_ord_map)\n",
+    "\n",
+    "#test end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +349,7 @@
     "x_test = sc.fit_transform(X_test)\n",
     "\n",
     "datacreated=np.append(X,y,axis=1)\n",
-    "datacreated_test=X_test\n",
+    "datacreated_test=x_test\n",
     "\n",
     "dataset=pd.DataFrame(datacreated, columns=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23])\n",
     "dataset1=pd.DataFrame(datacreated_test, columns=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22])"
@@ -291,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,12 +366,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset1.to_csv('test_preprocessed.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
