--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +16,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('train_preprocessed.csv', header=0)\n",
     "df_test = pd.read_csv('test_preprocessed.csv', header=0)\n",
     "\n",
+    "#with all basic features\n",
     "X=df.iloc[:,1:24]\n",
     "y=df.iloc[:,24:25]\n",
     "X_validation_test=df_test.iloc[:,1:24]\n",
+    "#X=X.drop(['1','2','3'],axis=1)\n",
+    "#X_validation_test=X_validation_test.drop(['1','2','3'],axis=1)\n",
+    "\n",
+    "#with new features\n",
+    "#X=df.iloc[:,1:34]\n",
+    "#y=df.iloc[:,34:35]\n",
+    "#X_validation_test=df_test.iloc[:,1:34]\n",
+    "\n",
+    "#less important features are dropped\n",
+    "#X = X.drop(['522','511','51','53','54','55','56','57','58'],axis=1)\n",
+    "#X_validation_test = X_validation_test.drop(['522','511','51','53','54','55','56','57','58'],axis=1)\n",
     "\n",
     "#check whether some values are missing\n",
     "#X.isnull().sum() "
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,37 +108,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 152,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\AkeshalaMarasinghe\\.conda\\envs\\HackStat2.0\\lib\\site-packages\\ipykernel_launcher.py:6: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.8183333333333334\n",
-      "[[3545  194]\n",
-      " [ 678  383]]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.84      0.95      0.89      3739\n",
-      "         1.0       0.66      0.36      0.47      1061\n",
-      "\n",
-      "    accuracy                           0.82      4800\n",
-      "   macro avg       0.75      0.65      0.68      4800\n",
-      "weighted avg       0.80      0.82      0.80      4800\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
     "#RandomForestClassifier\n",
     "\n",
@@ -145,7 +128,7 @@
     "y_pred_test = clf.predict(x_validation_test)\n",
     "\n",
     "#normal 0.89 0.47\n",
-    "#o feature fixed 0.89 0.48"
+    "#o feature fixed 0.89 0.48 submit 3"
    ]
   },
   {
@@ -226,6 +209,8 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "#XGBoostClassifier with GridSearch\n",
+    "\n",
     "from xgboost.sklearn import XGBClassifier\n",
     "from sklearn import metrics\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -290,7 +275,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "#Optimal number of features\n",
+    "# Optimal number of features\n",
     "\n",
     "from sklearn.feature_selection import RFECV\n",
     "import matplotlib.pyplot as plt\n",
@@ -315,13 +300,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# random forest optimization\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameters currently in use:\n",
+      "\n",
+      "{'bootstrap': True,\n",
+      " 'class_weight': None,\n",
+      " 'criterion': 'gini',\n",
+      " 'max_depth': None,\n",
+      " 'max_features': 'auto',\n",
+      " 'max_leaf_nodes': None,\n",
+      " 'min_impurity_decrease': 0.0,\n",
+      " 'min_impurity_split': None,\n",
+      " 'min_samples_leaf': 1,\n",
+      " 'min_samples_split': 2,\n",
+      " 'min_weight_fraction_leaf': 0.0,\n",
+      " 'n_estimators': 'warn',\n",
+      " 'n_jobs': None,\n",
+      " 'oob_score': False,\n",
+      " 'random_state': 42,\n",
+      " 'verbose': 0,\n",
+      " 'warm_start': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from pprint import pprint\n",
+    "\n",
+    "rf = RandomForestClassifier(random_state = 42)\n",
+    "\n",
+    "# Look at parameters used by our current forest\n",
+    "print('Parameters currently in use:\\n')\n",
+    "pprint(rf.get_params())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bootstrap': [True, False],\n",
+      " 'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, None],\n",
+      " 'max_features': ['auto', 'sqrt'],\n",
+      " 'min_samples_leaf': [1, 2, 4],\n",
+      " 'min_samples_split': [2, 5, 10],\n",
+      " 'n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "# Number of trees in random forest\n",
+    "n_estimators = [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)]\n",
+    "\n",
+    "# Number of features to consider at every split\n",
+    "max_features = ['auto', 'sqrt']\n",
+    "\n",
+    "# Maximum number of levels in tree\n",
+    "max_depth = [int(x) for x in np.linspace(10, 110, num = 11)]\n",
+    "max_depth.append(None)\n",
+    "\n",
+    "# Minimum number of samples required to split a node\n",
+    "min_samples_split = [2, 5, 10]\n",
+    "\n",
+    "# Minimum number of samples required at each leaf node\n",
+    "min_samples_leaf = [1, 2, 4]\n",
+    "\n",
+    "# Method of selecting samples for training each tree\n",
+    "bootstrap = [True, False]\n",
+    "\n",
+    "# Create the random grid\n",
+    "random_grid = {'n_estimators': n_estimators,\n",
+    "               'max_features': max_features,\n",
+    "               'max_depth': max_depth,\n",
+    "               'min_samples_split': min_samples_split,\n",
+    "               'min_samples_leaf': min_samples_leaf,\n",
+    "               'bootstrap': bootstrap}\n",
+    "pprint(random_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:  9.8min\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use the random grid to search for best hyperparameters\n",
+    "# First create the base model to tune\n",
+    "rf = RandomForestClassifier()\n",
+    "\n",
+    "# Random search of parameters, using 3 fold cross validation, \n",
+    "# search across 100 different combinations, and use all available cores\n",
+    "rf_random = RandomizedSearchCV(estimator = rf, param_distributions = random_grid, n_iter = 100, cv = 3, verbose=2, random_state=42, n_jobs = -1)\n",
+    "\n",
+    "# Fit the random search model\n",
+    "rf_random.fit(x_train, y_train)\n",
+    "\n",
+    "rf_random.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics\n",
+    "\n",
+    "def evaluate(model, test_features, test_labels):\n",
+    "    y_pred = cv.predict(test_features)\n",
+    "    print(\"Accuracy:\",metrics.accuracy_score(test_labels, y_pred))\n",
+    "    print(confusion_matrix(test_labels,y_pred))\n",
+    "    print(classification_report(test_labels,y_pred))\n",
+    "    \n",
+    "    y_pred = model.predict(test_features)\n",
+    "    errors = abs(y_pred - test_labels)\n",
+    "    mape = 100 * np.mean(errors / test_labels)\n",
+    "    accuracy = 100 - mape\n",
+    "    print('Model Performance')\n",
+    "    print('Average Error: {:0.4f} degrees.'.format(np.mean(errors)))\n",
+    "    print('Accuracy = {:0.2f}%.'.format(accuracy))\n",
+    "    \n",
+    "    return accuracy,y_pred\n",
+    "\n",
+    "base_model = RandomForestClassifier(n_estimators=100,max_features='auto',random_state=42,max_depth=10)\n",
+    "base_model.fit(x_train, y_train)\n",
+    "base_accuracy,y_pred_old = evaluate(base_model, x_validation, y_validation)\n",
+    "\n",
+    "best_random = rf_random.best_estimator_\n",
+    "random_accuracy,y_pred = evaluate(best_random, x_validation,  y_validation)\n",
+    "\n",
+    "print('Improvement of {:0.2f}%.'.format( 100 * (random_accuracy - base_accuracy) / base_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_test=pd.DataFrame({'NEXT_MONTH_DEFAULT':y_pred_test})\n",
-    "df_test.to_csv('Submissions/Submit3.csv',index=False)"
+    "df_test.to_csv('Submissions/Submit4.csv',index=False)"
    ]
   },
   {
