--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,8 +290,40 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
+    "\n",
+    "#train X6 - 5\n",
+    "\n",
+    "pay_july_le = LabelEncoder()\n",
+    "pay_july_ohe = OneHotEncoder()\n",
+    "\n",
+    "pay_july_labels = pay_july_le.fit_transform(X6['PAY_JULY'])\n",
+    "X6['PAY_JULY'] = pay_july_labels\n",
+    "\n",
+    "pay_july_arr = pay_july_ohe.fit_transform(X6[['PAY_JULY']]).toarray()\n",
+    "pay_july_labels = ['PAY_JULY_' + str(cls_label) for cls_label in pay_july_le.classes_]\n",
+    "X6= pd.DataFrame(pay_july_arr,columns = pay_july_labels)\n",
+    "\n",
+    "\n",
+    "#test X6 - 5\n",
+    "\n",
+    "pay_july_le = LabelEncoder()\n",
+    "pay_july_ohe = OneHotEncoder()\n",
+    "\n",
+    "pay_july_labels = pay_july_le.fit_transform(X6_test['PAY_JULY'])\n",
+    "X6_test['PAY_JULY'] = pay_july_labels\n",
+    "\n",
+    "pay_july_arr = pay_july_ohe.fit_transform(X6_test[['PAY_JULY']]).toarray()\n",
+    "pay_july_labels = ['PAY_JULY_' + str(cls_label) for cls_label in pay_july_le.classes_]\n",
+    "X6_test= pd.DataFrame(pay_july_arr,columns = pay_july_labels)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,12 +384,16 @@
     "datacreated_test=x_test\n",
     "\n",
     "dataset=pd.DataFrame(datacreated, columns=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23])\n",
-    "dataset1=pd.DataFrame(datacreated_test, columns=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22])"
+    "dataset1=pd.DataFrame(datacreated_test, columns=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22])\n",
+    "\n",
+    "\n",
+    "#dataset=pd.DataFrame(datacreated, columns=[0,1,2,3,4,522,511,50,51,52,53,54,55,56,57,58,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23])\n",
+    "#dataset1=pd.DataFrame(datacreated_test, columns=[0,1,2,3,4,522,511,50,51,52,53,54,55,56,57,58,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
