--- a/Model_Akeshala.ipynb
+++ b/Model_Akeshala.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "check-in - 1\n",
+    "cancel - 2\n",
+    "no-show - 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,23 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"Encoded Data Combined/Final Combined Data/new_train_data_akeshala_nipun_samal.csv\", encoding='latin-1')\n",
     "df_validation = pd.read_csv(\"Encoded Data Combined/Final Combined Data/new_validation_data_akeshala_nipun_samal.csv\", encoding='latin-1')\n",
-    "x_train = df.drop(columns=[\"Reservation_Status\",\"Reservation-id\",\"Previous_Cancellations\"]).iloc[:,1:]\n",
-    "y_train = df.iloc[:,21:22]\n",
-    "x_validation = df_validation.drop(columns=[\"Reservation_Status\",\"Reservation-id\",\"Previous_Cancellations\"]).iloc[:,1:]\n",
-    "y_validation = df_validation.iloc[:,21:22]"
+    "x_train = df.drop(columns=[\"Reservation_Status\",\"Reservation-id\"]).iloc[:,2:]\n",
+    "y_train = df.iloc[:,22:23]\n",
+    "x_validation = df_validation.drop(columns=[\"Reservation_Status\",\"Reservation-id\"]).iloc[:,2:]\n",
+    "y_validation = df_validation.iloc[:,22:23]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 184,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#combining childern and babies\n",
     "x_train['Children']=x_train['Children']+x_train['Babies']\n",
@@ -46,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.364496180429247\n"
+      "Accuracy = 0.3539468897781011\n"
      ]
     }
    ],
@@ -89,7 +96,7 @@
     "classifier = RandomForestClassifier(random_state = 23)\n",
     "classifier.fit(x_train, y_train.values.ravel())\n",
     "\n",
-    "#joblib.dump(classifier, 'randomforestmodel.pkl') \n",
+    "joblib.dump(classifier, 'randomforest_a0.37_f0.33.pkl') \n",
     "\n",
     "#classifier = joblib.load('randomforestmodel.pkl')\n",
     "\n",
@@ -99,25 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[200 247 294]\n",
-      " [117 126 155]\n",
-      " [425 509 676]]\n",
+      "[[631 429 550]\n",
+      " [272 202 267]\n",
+      " [149 109 140]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.27      0.27      0.27       741\n",
-      "           1       0.14      0.32      0.20       398\n",
-      "           2       0.60      0.42      0.49      1610\n",
+      "           0       0.60      0.39      0.47      1610\n",
+      "           1       0.27      0.27      0.27       741\n",
+      "           2       0.15      0.35      0.21       398\n",
       "\n",
-      "    accuracy                           0.36      2749\n",
+      "    accuracy                           0.35      2749\n",
       "   macro avg       0.34      0.34      0.32      2749\n",
-      "weighted avg       0.45      0.36      0.39      2749\n",
+      "weighted avg       0.45      0.35      0.38      2749\n",
       "\n"
      ]
     }
@@ -130,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.3917788286649691\n"
+      "Accuracy = 0.35467442706438707\n"
      ]
     }
    ],
@@ -153,25 +160,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[119 263 359]\n",
-      " [ 72 132 194]\n",
-      " [257 527 826]]\n",
+      "[[677 292 641]\n",
+      " [279 141 321]\n",
+      " [155  86 157]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.27      0.16      0.20       741\n",
-      "           1       0.14      0.33      0.20       398\n",
-      "           2       0.60      0.51      0.55      1610\n",
+      "           0       0.61      0.42      0.50      1610\n",
+      "           1       0.27      0.19      0.22       741\n",
+      "           2       0.14      0.39      0.21       398\n",
       "\n",
-      "    accuracy                           0.39      2749\n",
-      "   macro avg       0.34      0.34      0.32      2749\n",
-      "weighted avg       0.44      0.39      0.41      2749\n",
+      "    accuracy                           0.35      2749\n",
+      "   macro avg       0.34      0.34      0.31      2749\n",
+      "weighted avg       0.45      0.35      0.38      2749\n",
       "\n"
      ]
     }
@@ -184,47 +191,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.4128774099672608\n"
+      "Accuracy = 0.3463077482720989\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "classifier = GradientBoostingClassifier(learning_rate=0.005,n_estimators=1500,random_state=21,max_depth=7,min_samples_split=1600,min_samples_leaf=30,max_features=2,subsample=1)\n",
+    "classifier = GradientBoostingClassifier(learning_rate=0.005,n_estimators=1500,random_state=21,max_depth=7)\n",
     "classifier.fit(x_train, y_train.values.ravel())\n",
+    "joblib.dump(classifier, 'gradientboostmodel.pkl') \n",
+    "\n",
+    "classifier = joblib.load('gradientboostmodel.pkl')\n",
     "y_pred = classifier.predict(x_validation)\n",
+    "\n",
     "\n",
     "print(f\"Accuracy = {classifier.score(x_validation,y_validation.values.ravel())}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[113 225 403]\n",
-      " [ 75 106 217]\n",
-      " [250 444 916]]\n",
+      "[[575 434 601]\n",
+      " [263 221 257]\n",
+      " [145  97 156]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.26      0.15      0.19       741\n",
-      "           1       0.14      0.27      0.18       398\n",
-      "           2       0.60      0.57      0.58      1610\n",
+      "           0       0.58      0.36      0.44      1610\n",
+      "           1       0.29      0.30      0.30       741\n",
+      "           2       0.15      0.39      0.22       398\n",
       "\n",
-      "    accuracy                           0.41      2749\n",
-      "   macro avg       0.33      0.33      0.32      2749\n",
-      "weighted avg       0.44      0.41      0.42      2749\n",
+      "    accuracy                           0.35      2749\n",
+      "   macro avg       0.34      0.35      0.32      2749\n",
+      "weighted avg       0.44      0.35      0.37      2749\n",
       "\n"
      ]
     }
